// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="ajBaseButton-0-2-4 ajBaseButtonEnabled-0-2-5 aj-outlined-button ajOutlinedButton-0-2-1 ajOutlinedButtonEnabled-0-2-2"
>
  <button
    disabled={false}
    type="button"
  >
    <div>
      Snapshot Test
    </div>
  </button>
</div>
`;

exports[`renders correctly with all props 1`] = `
<div
  className="ajBaseButton-0-2-4 ajBaseButtonDisabled-0-2-6 aj-outlined-button ajOutlinedButton-0-2-1 ajOutlinedButtonDisabled-0-2-3"
  onClick={null}
>
  <button
    disabled={true}
    type="button"
  >
    <div>
      Snapshot Test
    </div>
  </button>
</div>
`;
